--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,3 +1,3 @@
 <ul>
-  <li *ngFor="let product of albumInfo?.album.products"></li>
+  <li *ngFor="let product of products">{{product.albumName }}</li>
 </ul>
